Thu Jul 10 00:02:54 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c (add): Check for CVSADM, ".", and "..", and skip any
	attempt to add them.
	* sanity.sh (errmsg2): New tests, tests for above fix.

	* main.c (main): In text printed upon --version, also refer
	people to --help.

	* rcscmds.c (RCS_exec_rcsdiff): Add comment about timezones.

	* server.c, cvs.h (cvs_output_binary): New function.
	* rcs.c (RCS_checkout): For a binary file, call cvs_output_binary
	rather than cvs_output.
	* client.c (handle_mbinary): New function.
	(responses): Add "Mbinary".

Tue Jul  8 12:18:16 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c (get_homedir): Add comment about root vs. user
	directory in pserver server.

Mon Jul  7 14:39:33 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (big): Also test Rcs-diff case.

	* client.c (update_entries): Reindent a line.

	* sanity.sh (death2): Add comment about Sun diff.  Thanks to
	Warren Jones <wjones@TC.FLUKE.COM> for reporting this.

	* client.c (update_entries): If DONT_USE_PATCH, then just treat a
	Patched response as an indication to try again with complete files.
	* update.c (update): Remove DONT_USE_PATCH ifdefs, since a CVS
	with DONT_USE_PATCH defined can still handle Rcs-diff.
	* sanity.sh (serverpatch): Add comment about this coming up in
	real life if the user modifies the file while CVS is running.

	* client.c (start_server): Add comment about logfiles if there are
	several connections to the server.
	(log_buffer_shutdown): Close the logfile after shutting down the
	underlying buffer.  This way at least we get the last set of
	logfiles rather than a bizarre mishmash.

1997-07-06  enami tsugutomo  <enami@but-b.or.jp>

	* logmsg.c (do_verify): Unlink temporary file before call error().
	Remove unneeded `return' statement.  Fix comment.

Sun Jul  6 13:36:32 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* diff.c (diff_fileproc): Change message from "during rcsdiff of"